# familiar

./: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Caddyfile.dev  Caddyfile.e2e  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
apps/campaign/: CLAUDE.md  Cargo.toml  Dockerfile
apps/campaign/examples/: smoke_assert_db.rs
apps/campaign/src/: config.rs  db.rs  embeddings.rs  error.rs  lib.rs  main.rs  openapi.rs  protocol.rs  router.rs  state.rs
apps/campaign/src/actors/: database.rs  database_writer.rs  mod.rs  page.rs  persist.rs  registry.rs  relationship_graph.rs  supervisor.rs  thing.rs  toc.rs
apps/campaign/src/actors/database_writer/: database_writer_actor.rs  database_writer_relationships.rs  mod.rs  tests.rs
apps/campaign/src/actors/page/: mod.rs  page_actor.rs  tests.rs
apps/campaign/src/actors/registry/: mod.rs  registry_actor.rs  tests.rs
apps/campaign/src/actors/relationship_graph/: mod.rs  relationship_graph_actor.rs  relationship_graph_store.rs
apps/campaign/src/actors/supervisor/: creation.rs  mod.rs  queries.rs  routing.rs  supervisor_actor.rs  tests.rs
apps/campaign/src/actors/toc/: mod.rs  tests.rs  toc_actor.rs  toc_snapshot.rs
apps/campaign/src/clients/: mod.rs  platform_internal.rs
apps/campaign/src/domain/: mod.rs  page.rs  relationship.rs  session.rs  thing.rs
apps/campaign/src/entities/: blocks.rs  campaign_metadata.rs  columns.rs  mod.rs  pages.rs  relationships.rs  sessions.rs  things.rs  toc.rs  toc_entries.rs  users.rs
apps/campaign/src/loro/: block_codec.rs  mod.rs  page.rs  thing.rs  toc.rs
apps/campaign/src/middleware/: auth.rs  internal_auth.rs
apps/campaign/src/migrations/: m20260428_000001_create_pages.rs  m20260428_000001_create_things.rs  m20260428_000002_create_blocks.rs  m20260428_000003_create_block_embeddings_vec.rs  m20260430_000001_create_campaign_metadata.rs  m20260519_000001_add_wizard_fields.rs  m20260520_000001_add_owner_user_id.rs  m20260523_000001_create_toc.rs  m20260526_000001_create_toc_entries.rs  m20260614_000001_create_sessions.rs  m20260620_000001_create_relationships.rs  mod.rs
apps/campaign/src/persistence/: database.rs  mod.rs  store.rs  store_local.rs  store_s3.rs
apps/campaign/src/routes/: catalog.rs  health.rs  initialize.rs  internal.rs  metadata.rs  mod.rs  pages.rs  relationships.rs  sessions.rs  things.rs  ws.rs
apps/campaign/src/starter_content/: catalog.rs  compile.rs  localized.rs  mod.rs  template.rs
apps/campaign/src/wire/: assembler.rs  broadcast.rs  fragmenter.rs  mod.rs  reassembly.rs
apps/campaign/src/ws/: connection.rs  mod.rs  upgrade.rs
apps/campaign/tests/: catalog_test.rs  create_page_test.rs  create_thing_test.rs  initialize_test.rs  internal_init_test.rs  lifecycle_test.rs  metadata_test.rs  relationship_graph_test.rs  relationships_route_test.rs  relationships_test.rs  schema.rs  schema.sql  schema_drift.rs  session_toc_test.rs  sessions_test.rs  spike.rs  toc_rejoin_test.rs  wire_roundtrip.rs
apps/campaign/tests/common/: mod.rs  test_app.rs
apps/platform/: CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dockerignore
apps/platform/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  openapi.rs  state.rs
apps/platform/src/clients/: campaign_internal.rs  mod.rs
apps/platform/src/entities/: campaign_members.rs  campaigns.rs  create_attempts.rs  mod.rs  users.rs
apps/platform/src/middleware/: auth.rs  internal_auth.rs  mod.rs
apps/platform/src/migrations/: m20260417_000001_create_users.rs  m20260515_000001_create_campaigns.rs  m20260515_000002_create_create_attempts.rs  m20260528_000001_create_campaign_members.rs  mod.rs
apps/platform/src/routes/: campaigns.rs  health.rs  internal_campaigns.rs  me.rs  mod.rs
apps/platform/tests/: auth_test.rs  boot_test.rs  campaigns_test.rs  cors_test.rs  health_test.rs  migration_test.rs  schema.rs  schema.sql  spawn_smoke.rs
apps/platform/tests/common/: mod.rs
crates/app-shared/: Cargo.toml  README.md
crates/app-shared/src/: auth.rs  id.rs  lib.rs
crates/app-shared/src/auth/: api.rs  domain.rs  extractor.rs  mod.rs  validator.rs  wire.rs
crates/app-shared/src/campaigns/: api.rs  internal.rs  mod.rs
crates/app-shared/src/middleware/: internal_auth.rs
crates/app-shared/tests/: conventions.rs
crates/campaign-shared/: Cargo.toml  README.md
crates/campaign-shared/src/: id.rs  lib.rs  notification.rs  page_kind.rs  relationship.rs  status.rs  things.rs
crates/campaign-shared/src/document/: mod.rs  pages.rs  sessions.rs  things.rs
crates/campaign-shared/src/loro/: mod.rs  page.rs  prosemirror.rs  thing.rs  toc.rs
crates/campaign-shared/src/onboarding/: catalog.rs  initialize.rs  metadata.rs  mod.rs
crates/fs-id/: Cargo.toml
crates/fs-id/src/: lib.rs
crates/fs-id/tests/: compile_fail.rs  roundtrip.rs
crates/fs-id/tests/compile_fail/: brand_override_rejected.rs  brand_override_rejected.stderr  not_tuple_struct.rs  not_tuple_struct.stderr  unknown_inner_type.rs  unknown_inner_type.stderr
infra/pulumi-cloud/: .envrc  CLAUDE.md  Makefile  Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  cloud.py  config.py  k3s_cluster.py  k8s.py  object_storage.py  pyproject.toml  pyrightconfig.json
infra/pulumi-cloud/.zed/: settings.json
infra/pulumi-cloud/scripts/: bootstrap-object-storage.sh  bootstrap-pulumi-admin.sh  bootstrap.sh  nuke-k8s.sh  rotate_scw_key.py  setup.sh
infra/test-k8s/: .gitignore  Pulumi.yaml  README.md  __main__.py  pyproject.toml
infra/tofu/: .gitignore  .terraform.lock.hcl  hetzner_compute.tf  hetzner_s3.tf  imports.tf  outputs.tf  providers.tf  pyproject.toml  scaleway_iam.tf  scaleway_secrets.tf  terraform.tfvars  variables.tf  versions.tf
infra/tofu/scripts/: bootstrap-k8s-admin.sh  bootstrap-object-storage.sh  bootstrap.sh  generate-imports.sh  rotate_scw_key.py  setup.sh
workers/whisperx/: pyproject.toml
workers/whisperx/src/familiar_systems_whisperx/: __init__.py
workers/whisperx/src/loreweaver_whisperx/: __init__.py
(+476 files in other folders)
