[workspace]
resolver = "3"
members = ["apps/platform", "apps/campaign", "crates/app-shared", "crates/campaign-shared"]

[workspace.package]
edition = "2024"
repository = "https://github.com/familiar-systems/familiar"

[workspace.dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
loro = "1"
nanoid = "0.4.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = "1"
serde_json = "1"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
ts-rs = { version = "12.0.1", features = ["uuid-impl"] }
utoipa = { version = "5.4.0", features = ["uuid"] }
uuid = { version = "1.23.0", features = ["serde", "v7"] }
