[workspace]
resolver = "3"
members = ["apps/platform", "apps/campaign", "crates/app-shared", "crates/campaign-shared"]

[workspace.package]
edition = "2024"
repository = "https://github.com/familiar-systems/familiar"

[workspace.dependencies]
axum = "0.8"
chrono = { version = "0.4.44", features = ["serde"] }
# garde = { version = "0.22", features = ["derive", "email"] }
# Not today but soon
loro = "1"
nanoid = "0.5.0"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
  "with-uuid",
  "with-chrono",
] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = "1"
serde_json = "1"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "request-id", "trace", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ts-rs = { version = "12.0.1", features = ["uuid-impl"] }
utoipa = { version = "5.4.0", features = ["uuid"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.23.1", features = ["serde", "v7"] }
