[package]
name = "familiar-systems-campaign"
version = "0.0.0"
edition.workspace = true
publish = false
default-run = "familiar-systems-campaign"

[[bin]]
name = "emit-openapi-campaign"
path = "src/bin/emit-openapi.rs"

[dependencies]
axum = { workspace = true }
familiar-systems-app-shared = { path = "../../crates/app-shared" }
familiar-systems-campaign-shared = { path = "../../crates/campaign-shared" }
fs-id = { path = "../../crates/fs-id" }

arc-swap = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
include_dir = "0.7"
kameo = { workspace = true }
libsqlite3-sys = "0.30"
loro = { workspace = true }
object_store = { version = "0.13", features = ["aws"] }
async-trait = "0.1"
loro-protocol = "0.3.0"
reqwest = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
sqlite-vec = "0.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
petgraph = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3.14"
tokio = { workspace = true }
wiremock = "0.6.5"
