[package]
name = "familiar-systems-platform"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
axum.workspace = true
chrono.workspace = true
familiar-systems-app-shared = { path = "../../crates/app-shared" }
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
reqwest.workspace = true
serial_test = "3.4.0"
tokio.workspace = true
tower = { version = "0.5.3", features = ["util"] }
wiremock = "0.6.5"
