[package]
name = "familiar-systems-platform"
version = "0.0.0"
edition.workspace = true
publish = false
# emit-openapi is a sibling binary added under src/bin/. Without
# default-run, `cargo run -p familiar-systems-platform` becomes ambiguous.
default-run = "familiar-systems-platform"

[features]
# Mounts the Scalar UI at /docs. Off in production binaries; turned on by
# `mise run dev:platform` so http://app.localhost:8080/api/docs renders.
dev-ui = ["dep:utoipa-scalar"]

[dependencies]
axum.workspace = true
chrono.workspace = true
familiar-systems-app-shared = { path = "../../crates/app-shared" }
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-scalar = { workspace = true, optional = true }
uuid.workspace = true

[[bin]]
name = "emit-openapi"
path = "src/bin/emit-openapi.rs"

[dev-dependencies]
reqwest.workspace = true
serial_test = "3.4.0"
tokio.workspace = true
tower = { version = "0.5.3", features = ["util"] }
wiremock = "0.6.5"
