[package]
name = "familiar-systems-app-shared"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
chrono.workspace = true
nanoid.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
ts-rs.workspace = true
utoipa.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
wiremock = "0.6.5"
