[package]
name = "familiar-systems-app-shared"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
axum.workspace = true
chrono.workspace = true
fs-id = { workspace = true }
reqwest.workspace = true
tracing.workspace = true
serde.workspace = true
subtle.workspace = true
thiserror.workspace = true
ts-rs.workspace = true
utoipa.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
wiremock = "0.6.5"
