[package]
name = "fs-id"
version = "0.0.0"
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
fs-id-macros = { workspace = true }
nanoid.workspace = true
serde.workspace = true
ts-rs.workspace = true
ulid.workspace = true
utoipa.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
trybuild = "1"
