[project]
name = "loreweaver-whisperx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Grinshpon", email = "mike@loreweaver.no" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.38.4",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
