[project]
name = "familiar-systems-whisperx"
version = "0.1.0"
description = "WhisperX audio transcription worker"
authors = [{ name = "Michael Grinshpon", email = "mike@familiar.systems" }]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["basedpyright>=1.39.3", "pytest>=9.0.3", "ruff>=0.15.11"]
